tests/agl/rejections/type/duplicate_ctor_arg.agl
record P
  n: int
let p = P(n: 1, n: 2)
